add place on task

--- a/app/views/browse.html
+++ b/app/views/browse.html
@@ -87,7 +87,11 @@
 
       <br>
 
+      <div class="panel-heading">
+        <h3 class="panel-title">City - {{ selectedTask.place.name }}</h3>
+      </div>
       <!-- DESCRIPTION -->
+
       <div class="row">
         <div class="col-md-12">
           <div class="panel panel-default">
