--- a/app/views/browse.html
+++ b/app/views/browse.html
@@ -88,7 +88,7 @@
       <br>
 
       <div class="panel-heading">
-        <h3 class="panel-title">City - {{ selectedTask.place.name }}</h3>
+        <h3 class="panel-title">City - {{ selectedTask.place }}</h3>
       </div>
       <!-- DESCRIPTION -->
 
