--- a/app/views/partials/post.html
+++ b/app/views/partials/post.html
@@ -14,7 +14,7 @@
             <input type="text" ng-model="task.title" class="form-control" placeholder="Task title" required><br>
             <textarea ng-model="task.description" class="form-control" placeholder="Describe what you need done" required></textarea><br>
             <input type="number" ng-model="task.total" class="form-control" placeholder="How much will you pay?" required><br>
-            <input class="form-control" g-places-autocomplete force-selection="true" placeholder="Place" ng-model="task.place"/><br>
+            <input class="form-control" g-places-autocomplete force-selection="true" placeholder="Place" ng-model="place"/><br>
             <input type="submit" value="Post Now" class="btn btn-warning">
           </form>
         </div>
